Removed json view and made GUI

--- a/oxd-kong/assets/js/app/core/auth/layout.html
+++ b/oxd-kong/assets/js/app/core/auth/layout.html
@@ -16,7 +16,7 @@
 
                 <div class="panel-body">
                     <div data-ui-view="authContent"></div>
-                    <p class="help-block text-center">KONGA {{konga_version}}</p>
+                    <!--<p class="help-block text-center">KONGA {{konga_version}}</p>-->
                 </div>
             </div>
 
