--- a/oxd-kong/assets/js/app/plugins/plugins.html
+++ b/oxd-kong/assets/js/app/plugins/plugins.html
@@ -1,216 +1,89 @@
-<!--<div class="row actions">-->
-  <!--<div class="col-md-12">-->
-    <!--<div class="pull-left">-->
-      <!--<a data-ui-sref="plugins.add"-->
-         <!--ng-if="user.hasPermission($state.name.split('.')[0],'create')"-->
-         <!--class="btn btn-primary">-->
-        <!--<i class="mdi mdi-plus"></i>-->
-        <!--Add global plugins-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<list-search-->
-      <!--class="pull-right"-->
-      <!--data-filters="filters"-->
-      <!--data-options="itemsPerPageOptions"-->
-      <!--data-items="itemsPerPage"></list-search>-->
-  <!--</div>-->
-<!--</div>-->
-
+<div class="row actions">
+  <div class="col-md-12">
+    <div class="pull-left">
+      <a data-ui-sref="plugins.add"
+         ng-if="user.hasPermission($state.name.split('.')[0],'create')"
+         class="btn btn-primary">
+        <i class="mdi mdi-plus"></i>
+        Add global plugins
+      </a>
+    </div>
+    <list-search
+      class="pull-right"
+      data-filters="filters"
+      data-options="itemsPerPageOptions"
+      data-items="itemsPerPage"
+    ></list-search>
+  </div>
+</div>
 
 <konga-loader ng-if="loading && !items.data.length"></konga-loader>
 
 <div class="row" ng-if="!loading || items.data.length">
   <div class="col-md-12">
-    <div class="col-lg-12 col-md-8">
-      <div ba-panel ba-panel-class="with-scroll">
-        <form name="PluginForm" novalidate>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group has-feedback"
-                   ng-class="{'has-error': PluginForm.api_id.$invalid && (PluginForm.api_id.$dirty || PluginForm.$submitted)}">
-                <label for="api_id"><span class="text text-danger">*</span> API</label>
-                <select class="form-control" id="api_id" name="api_id" title="Select API" selectpicker
-                        ng-model="modelPlugin.api_id"
-                        ng-options="api.id as api.name for api in apis" required>
-                  <option value="">--- Select API ---</option>
-                </select>
-                <span class="help-block error-block basic-block">Select <code>API</code> in which you want to add this plugin</span>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="form-group has-feedback">
-                <label for="api_id"><span class="text text-danger">*</span>UMA Resources</label>
-                <span class="help-block error-block basic-block">Register a protected resource using below tool. For <a href="https://gluu.org/docs/oxd/3.1.1/api/#uma-2-resource-server-apis" target="_blank">more details...</a> </span>
-              </div>
-              <div class="row" ng-repeat="element in modelPlugin.config.protection_document track by $index"
-                   style="border: 1px dotted;">
-                <hr/>
-                <div class="col-md-1">
-                  <button type="button" title="Delete path" class="btn btn-danger"
-                          ng-click="modelPlugin.config.protection_document.splice($index,1)">
-                    <i class="mdi mdi-close"></i>
-                  </button>
-                </div>
-                <div class="col-md-3">
-                  <div class="form-group has-feedback"
-                       ng-class="{'has-error': PluginForm.path.$invalid && (PluginForm.path.$dirty || PluginForm.$submitted)}">
-                    <input type="text" class="form-control" id="path{{$index}}" name="path{{$index}}"
-                           title="Enter path"
-                           placeholder="Enter path"
-                           ng-model="element.path"
-                           ng-required="true"/>
-                    <span class="help-block error-block basic-block">The path which you want to protected by UMA</span>
-                  </div>
-                </div>
-                <div class="col-md-8">
-                  <div class="row" ng-repeat="cond in element.conditions">
-                    <div class="row">
-                      <div class="col-md-10">
-                        <div class="form-group has-feedback"
-                             ng-class="{'has-error': PluginForm.httpMethods.$invalid && (PluginForm.httpMethods.$dirty || PluginForm.$submitted)}">
-                          <tags-input ng-model="cond.httpMethods"
-                                      id="httpMethods{{$parent.$index}}{{$index}}"
-                                      add-from-autocomplete-only="true"
-                                      placeholder="Enter http Methods">
-                            <auto-complete source="loadMethods($query)"
-                                           min-length="0"
-                                           debounce-delay="0"></auto-complete>
-                          </tags-input>
-                          <span class="help-block error-block basic-block">This field is required!</span>
-                        </div>
-                      </div>
-                      <div class="col-md-2">
-                        <button type="button" title="Delete condition" class="btn btn-danger"
-                                ng-click="element.conditions.splice($index,1)">
-                          <i class="mdi mdi-close"></i>
-                        </button>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-12">
-                        <div class="form-group has-feedback"
-                             ng-class="{'has-error': PluginForm.scopes.$invalid && (PluginForm.scopes.$dirty || PluginForm.$submitted)}">
-                          <tags-input ng-model="cond.scopes"
-                                      id="scopes{{$parent.$index}}{{$index}}"
-                                      placeholder="Enter scopes">
-                            <auto-complete source="loadScopes($query)"
-                                           min-length="0"
-                                           template="my-custom-template"
-                                           debounce-delay="0"></auto-complete>
-                          </tags-input>
-                          <script type="text/ng-template" id="my-custom-template">
-                            <div>
-                              <span>{{data.name}}</span>
-                            </div>
-                          </script>
-                          <span class="help-block error-block basic-block">This field is required!</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-12">
-                        <div class="form-group has-feedback">
-                          <tags-input ng-model="cond.ticketScopes"
-                                      id="ticketScopes{{$parent.$index}}{{$index}}"
-                                      placeholder="Enter ticket scopes"></tags-input>
-                        </div>
-                      </div>
-                    </div>
-                    <hr/>
-                  </div>
-                  <div class="row">
-                    <button type="button" class="btn btn-info" ng-click="addNewCondition($index)">
-                      <i class="mdi mdi-clipboard-plus"></i> Add Condition
-                    </button>
-                  </div>
-                  <br/>
-                </div>
-              </div>
-              <hr/>
-              <button type="button" class="btn btn-info" ng-click="addNewPath()">
-                <i class="mdi mdi-clipboard-plus"></i> Add path
-              </button>
-              <button type="button" class="btn btn-primary" ng-click="showResourceJSON()">
-                <i class="mdi mdi-information"></i> View Resource Json
-              </button>
-            </div>
-          </div>
-          <div class="row">
-            <hr/>
-            <button type="submit" class="btn btn-primary" ng-click="addPlugin(PluginForm.$valid)">
-              <i class="mdi mdi-check"></i> Add Plugin
+    <div class="table-responsive">
+      <table class="table table-hover table-striped">
+        <tr>
+          <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'update')"></th>
+          <th width="1"></th>
+          <th width="{{item.width}}" class="text-nowrap"
+              data-ng-repeat="item in titleItems | filter:titleFilter">
+            <a
+              data-ng-show="item.column"
+              class="clickable"
+              data-ng-click="changeSort(item)"
+              data-ng-bind-html="item.title.toUpperCase()"></a>
+            <span
+              data-ng-show="!item.column"
+              data-ng-bind-html="item.title.toUpperCase()"></span>
+
+            <i class="mdi"
+               data-ng-show="sort.column == item.column"
+               data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"></i>
+          </th>
+          <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'delete')"></th>
+        </tr>
+        <tr
+          dir-paginate="item in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage">
+          <td ng-if="user.hasPermission($state.name.split('.')[0],'update')">
+            <input
+              bs-switch
+              switch-on-color="primary"
+              ng-change="updatePlugin(item)"
+              ng-model="item.enabled"
+              type="checkbox"
+              switch-size="mini">
+          </td>
+          <td>
+            <raw-view data-item="item"></raw-view>
+          </td>
+          <th><a href ng-click="onEditPlugin(item)">{{item.name}}</a></th>
+          <td>
+            <a data-ng-if="item.api_id" data-ui-sref="apis.edit({api_id:item.api_id})">{{item.api_id}}</a>
+            <span data-ng-if="!item.api_id">All APIs</span>
+          </td>
+          <td>
+            <a data-ng-if="item.consumer_id"
+               data-ui-sref="consumers.edit({id:item.consumer_id})">{{item.consumer_id}}</a>
+            <span data-ng-if="!item.consumer_id">All consumers</span>
+          </td>
+          <td>{{item.created_at | date : format : timezone}}</td>
+
+          <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
+            <button type="button" ng-click="deleteItem($index,item)" class="btn btn-danger btn-link">
+              <i class="mdi mdi-delete"></i>
+              Delete
             </button>
-          </div>
-        </form>
-      </div>
+          </td>
+        </tr>
+        <tr data-ng-if="items.data.length === 0">
+          <td colspan="100%" class="text-center text-muted">
+            <em>no data found...</em>
+          </td>
+        </tr>
+      </table>
     </div>
+    <dir-pagination-controls></dir-pagination-controls>
   </div>
-  <!--<div class="col-md-12">-->
-    <!--<div class="table-responsive">-->
-      <!--<table class="table table-hover table-striped">-->
-        <!--<tr>-->
-          <!--<th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'update')"></th>-->
-          <!--<th width="1"></th>-->
-          <!--<th width="{{item.width}}" class="text-nowrap"-->
-              <!--data-ng-repeat="item in titleItems | filter:titleFilter">-->
-            <!--<a-->
-              <!--data-ng-show="item.column"-->
-              <!--class="clickable"-->
-              <!--data-ng-click="changeSort(item)"-->
-              <!--data-ng-bind-html="item.title.toUpperCase()"></a>-->
-            <!--<span-->
-              <!--data-ng-show="!item.column"-->
-              <!--data-ng-bind-html="item.title.toUpperCase()"></span>-->
-
-            <!--<i class="mdi"-->
-               <!--data-ng-show="sort.column == item.column"-->
-               <!--data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"></i>-->
-          <!--</th>-->
-          <!--<th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'delete')"></th>-->
-        <!--</tr>-->
-        <!--<tr-->
-          <!--dir-paginate="item in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage">-->
-          <!--<td ng-if="user.hasPermission($state.name.split('.')[0],'update')">-->
-            <!--<input-->
-              <!--bs-switch-->
-              <!--switch-on-color="primary"-->
-              <!--ng-change="updatePlugin(item)"-->
-              <!--ng-model="item.enabled"-->
-              <!--type="checkbox"-->
-              <!--switch-size="mini">-->
-          <!--</td>-->
-          <!--<td>-->
-            <!--<raw-view data-item="item"></raw-view>-->
-          <!--</td>-->
-          <!--<th><a href ng-click="onEditPlugin(item)">{{item.name}}</a></th>-->
-          <!--<td>-->
-            <!--<a data-ng-if="item.api_id" data-ui-sref="apis.edit({api_id:item.api_id})">{{item.api_id}}</a>-->
-            <!--<span data-ng-if="!item.api_id">All APIs</span>-->
-          <!--</td>-->
-          <!--<td>-->
-            <!--<a data-ng-if="item.consumer_id"-->
-               <!--data-ui-sref="consumers.edit({id:item.consumer_id})">{{item.consumer_id}}</a>-->
-            <!--<span data-ng-if="!item.consumer_id">All consumers</span>-->
-          <!--</td>-->
-          <!--<td>{{item.created_at | date : format : timezone}}</td>-->
-
-          <!--<td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">-->
-            <!--<button type="button" ng-click="deleteItem($index,item)" class="btn btn-danger btn-link">-->
-              <!--<i class="mdi mdi-delete"></i>-->
-              <!--Delete-->
-            <!--</button>-->
-          <!--</td>-->
-        <!--</tr>-->
-        <!--<tr data-ng-if="items.data.length === 0">-->
-          <!--<td colspan="100%" class="text-center text-muted">-->
-            <!--<em>no data found...</em>-->
-          <!--</td>-->
-        <!--</tr>-->
-      <!--</table>-->
-    <!--</div>-->
-    <!--<dir-pagination-controls></dir-pagination-controls>-->
-  <!--</div>-->
-
-
 </div>
 
