Added not operator and solved small issues

--- a/oxd-kong/assets/js/app/dashboard/dashboard.html
+++ b/oxd-kong/assets/js/app/dashboard/dashboard.html
@@ -46,6 +46,10 @@
             <td>{{globalInfo.opHost}}</td>
           </tr>
           <tr>
+            <th>OXD version</th>
+            <td>{{globalInfo.oxdVersion}}</td>
+          </tr>
+          <tr>
             <th>OXD Host</th>
             <td>{{globalInfo.oxdWeb}}</td>
           </tr>
@@ -96,6 +100,10 @@
           <tr>
             <th>Admin listen</th>
             <td>{{info.configuration.admin_listen}}</td>
+          </tr>
+          <tr>
+            <th>Proxy listen</th>
+            <td>{{info.configuration.proxy_listen}}</td>
           </tr>
         </table>
       </div>
