Changes title in layout

--- a/gluu-gateway/assets/js/app/core/auth/layout.html
+++ b/gluu-gateway/assets/js/app/core/auth/layout.html
@@ -5,7 +5,7 @@
 
             <div class="panel panel-default no-margin">
                 <div class="panel-heading">
-                    <h4 style="color: #ffffff; text-align: center" class="img-responsive padding">OXD-KONG</h4>
+                    <h4 style="color: #ffffff; text-align: center" class="img-responsive padding">GLUU-GATEWAY</h4>
                     <!--<img ng-src="images/konga-logo-white-no-icon.png" class="img-responsive padding"/>-->
                     <!--<h3 class="text-white">KONGA</h3>-->
                     <!--<ul class="nav nav-tabs nav-justified">-->
