--- a/konga/assets/js/app/core/auth/layout.html
+++ b/konga/assets/js/app/core/auth/layout.html
@@ -5,8 +5,7 @@
 
             <div class="panel panel-default no-margin">
                 <div class="panel-heading">
-                    <h4 style="color: #ffffff; text-align: center" class="img-responsive padding">GLUU-GATEWAY</h4>
-                    <!--<img ng-src="images/konga-logo-white-no-icon.png" class="img-responsive padding"/>-->
+                    <img ng-src="images/konga-logo-white-no-icon.png" class="img-responsive padding"/>
                     <!--<h3 class="text-white">KONGA</h3>-->
                     <!--<ul class="nav nav-tabs nav-justified">-->
                         <!--<li ui-sref="auth.login" ui-sref-active="active"><a>LOGIN</a></li>-->
