Updated konga logo with gluu-gateway and showed oxd server error log in login

--- a/konga/assets/js/app/core/auth/layout.html
+++ b/konga/assets/js/app/core/auth/layout.html
@@ -5,7 +5,7 @@
 
             <div class="panel panel-default no-margin">
                 <div class="panel-heading">
-                    <img ng-src="images/konga-logo-white-no-icon.png" class="img-responsive padding"/>
+                    <img ng-src="images/gluu-gateway.png" class="img-responsive padding" style="width:80%"/>
                     <!--<h3 class="text-white">KONGA</h3>-->
                     <!--<ul class="nav nav-tabs nav-justified">-->
                         <!--<li ui-sref="auth.login" ui-sref-active="active"><a>LOGIN</a></li>-->
