Hide Client Secret by default #11

--- a/konga/assets/js/app/dashboard/dashboard.html
+++ b/konga/assets/js/app/dashboard/dashboard.html
@@ -59,11 +59,11 @@
           </tr>
           <tr>
             <th>Client Id</th>
-            <td>{{globalInfo.clientId}}</td>
+            <td><span data-ng-show="isShowClientId">{{globalInfo.clientId}}</span> <a href data-ng-click="isShowClientId = !isShowClientId" title="{{isShowClientId ? 'Hide': 'Show'}}"><i class="mdi mdi-eye"></i></a> </td>
           </tr>
           <tr>
             <th>Client Secret</th>
-            <td>{{globalInfo.clientSecret}}</td>
+            <td><span data-ng-show="isShowClientSecret">{{globalInfo.clientSecret}}</span> <a href data-ng-click="isShowClientSecret = !isShowClientSecret" title="{{isShowClientSecret ? 'Hide': 'Show'}}"><i class="mdi mdi-eye"></i></a></td>
           </tr>
         </table>
       </div>
