--- a/konga/assets/js/app/users/user.html
+++ b/konga/assets/js/app/users/user.html
@@ -8,50 +8,6 @@
         data-editable-form
         name="editableForm"
         data-onaftersave="saveUser()">
-    <!--<div class="row margin-bottom">-->
-    <!--<div class="col-md-12">-->
-    <!--<h3 class="pull-left margin-top">-->
-    <!--{{user.username}}-->
-    <!--</h3>-->
-    <!--<div class="margin-top">-->
-    <!--<div class="pull-right" data-ng-show="editableForm.$visible">-->
-    <!--<button type="submit" class="btn btn-primary"-->
-    <!--data-ng-disabled="editableForm.$waiting"-->
-    <!--&gt;-->
-    <!--<i class="mdi mdi-check"></i>-->
-    <!--Save-->
-    <!--</button>-->
-    <!--<button type="button" class="btn btn-danger"-->
-    <!--data-ng-disabled="editableForm.$waiting"-->
-    <!--data-ng-click="cancelEditing()"-->
-    <!--&gt;-->
-    <!--<i class="mdi mdi-close"></i>-->
-    <!--Cancel-->
-    <!--</button>-->
-    <!--</div>-->
-    <!--<div class="pull-right" data-ng-show="!editableForm.$visible ">-->
-    <!--<a-->
-    <!--data-ng-click="editableForm.$show()"-->
-    <!--data-uib-tooltip="Toggle edit mode"-->
-    <!--class="btn btn-warning">-->
-    <!--<i class="mdi mdi-pencil"></i>-->
-    <!--Edit-->
-    <!--</a>-->
-    <!--<button type="button" class="btn btn-danger"-->
-    <!--data-ng-bootbox-title="Delete {{user.username}}"-->
-    <!--data-ng-bootbox-custom-dialog="Really want to delete the user?"-->
-
-    <!--data-ng-bootbox-buttons="confirmButtonsDelete">-->
-    <!--<i class="mdi mdi-delete"></i>-->
-    <!--Delete-->
-    <!--</button>-->
-
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--</div>-->
-    <!--</div>-->
-
     <div class="row">
       <div class="col-md-3 col-lg-3 " align="center"><img ng-src="images/user-profile.png"
                                                           class="img-circle img-responsive profile-user-icon"></div>
@@ -65,37 +21,10 @@
               Info
             </th>
           </tr>
-          <!--<tr>-->
-          <!--<th>Username</th>-->
-          <!--<td>-->
-          <!--<span-->
-          <!--data-editable-text="user.username"-->
-          <!--data-e-name="user.username"-->
-          <!--data-e-required>-->
-          <!--{{user.username}}-->
-          <!--</span>-->
-          <!--</td>-->
-          <!--</tr>-->
           <tr>
-            <th>First Name</th>
+            <th>User Id</th>
             <td>
-              <span data-editable-text="user.firstName" data-e-name="user.firstName">{{user.firstName}}</span>
-            </td>
-          </tr>
-          <tr>
-            <th>Last Name</th>
-            <td>
-              <span data-editable-text="user.lastName" data-e-name="user.lastName">{{user.lastName}}</span>
-            </td>
-          </tr>
-          <tr ng-class="{'danger' : errors.email}">
-            <th>Email</th>
-            <td>
-              <span data-editable-text="user.email" data-e-name="user.email" data-e-required>
-                <span data-ng-show="!user.email">-</span>
-                <a data-ng-show="user.email" href="mailto:{{user.email}}">{{user.email}}</a>
-              </span>
-              <p class="text-danger" ng-if="errors.email" data-ng-bind="errors.email"></p>
+              <span>{{user.username}}</span>
             </td>
           </tr>
           <tr ng-if="editableForm.$visible && authUser.admin">
@@ -160,7 +89,7 @@
             <td>{{user.createdAt | date : "MMM d, y HH:mm"}}</td>
           </tr>
           <tr data-ng-show="!editableForm.$visible">
-            <th>Last update</th>
+            <th>Last Login</th>
             <td>{{user.updatedAt | date : "MMM d, y HH:mm"}}</td>
           </tr>
           </tbody>
