Added oxd in gluu-oauth2-client-auth plugin #19

--- a/konga/assets/js/app/consumers/credentials/oauth2.html
+++ b/konga/assets/js/app/consumers/credentials/oauth2.html
@@ -19,6 +19,7 @@
     <tr>
       <th>#</th>
       <th>name</th>
+      <th>oxd id</th>
       <th>client id</th>
       <th>created</th>
       <th></th>
@@ -26,7 +27,8 @@
     <tr data-ng-repeat="cred in oauth2_credentials.data | orderBy : created_at : true">
       <td width="1">{{$index+1}}.</td>
       <th>{{cred.name}}</th>
-      <th>{{cred.client_id}}</th>
+      <th class="no-wrap">{{cred.oxd_id}}</th>
+      <th class="no-wrap">{{cred.client_id}}</th>
       <td width="1" class="no-wrap">{{cred.created_at | date : format : timezone}}</td>
       <td width="1">
         <button type="button" ng-click="deleteOAuth2($index,cred)" class="btn btn-danger btn-link">
