--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -25,12 +25,22 @@
       </div>
     </div>
 
+    <div class="form-group" ng-class="{'has-error' : errors.oxd_http_url}">
+      <label class="col-sm-4 control-label">OXD http URL <br><em>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.oxd_http_url" class="form-control" disabled>
+        <div class="text-danger" ng-if="errors.oxd_http_url" data-ng-bind="errors.oxd_http_url"></div>
+        <p class="help-block">OXD http url used to create and register OpenId client.</p>
+      </div>
+    </div>
+
     <div class="form-group">
       <label class="col-sm-4 control-label">JWKS URI<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.jwks_uri" class="form-control">
+        <input ng-model="data.client_jwks_uri" class="form-control">
       </div>
     </div>
 
@@ -48,7 +58,7 @@
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <select class="form-control" ng-model="data.token_endpoint_auth_method" ng-options="method as method for method in token_endpoint_auth_method">
+        <select class="form-control" ng-model="data.client_token_endpoint_auth_method" ng-options="method as method for method in token_endpoint_auth_method">
           <option value="">- Please select one -</option>
           <option value="">none</option>
         </select>
@@ -60,7 +70,7 @@
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <select class="form-control" ng-model="data.token_endpoint_auth_method" ng-options="alg as alg for alg in token_endpoint_auth_signing_alg">
+        <select class="form-control" ng-model="data.client_token_endpoint_auth_signing_alg" ng-options="alg as alg for alg in token_endpoint_auth_signing_alg">
           <option value="">- Please select one -</option>
           <option value="">none</option>
         </select>
