Added Konga Form to manually add client #23

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -36,6 +36,36 @@
     </div>
 
     <div class="form-group">
+      <label class="col-sm-4 control-label">OXD Id<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.oxd_id" class="form-control">
+        <p class="help-block">If you have existing oxd entry then enter oxd_id(also client_id and client_secret). If you have client created from OP server then skip it and enter only below client_id and client_secret. </p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Client Id<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.client_id" class="form-control">
+        <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Client secret<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.client_secret" class="form-control">
+        <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label class="col-sm-4 control-label">JWKS URI<br><em>
         <small class="help-block">optional</small>
       </em></label>
