Designed API and oauth consumer page in konga

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -24,6 +24,18 @@
           name.</p>
       </div>
     </div>
+    <div class="form-group">
+      <label class="col-sm-4 control-label">KONG Consumer acts as UMA client<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.kong_acts_as_uma_client" switch-size="small" type="checkbox" switch-on-text="YES"
+               switch-off-text="NO">
+        <p class="help-block">
+          If checked, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a 401/Unauthorized.
+        </p>
+      </div>
+    </div>
 
     <div class="form-group" ng-class="{'has-error' : errors.oxd_http_url}">
       <label class="col-sm-4 control-label">OXD http URL <br><em>
@@ -41,7 +53,8 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.oxd_id" class="form-control">
-        <p class="help-block">If you have existing oxd entry then enter oxd_id(also client_id and client_secret). If you have client created from OP server then skip it and enter only below client_id and client_secret. </p>
+        <p class="help-block">If you have existing oxd entry then enter oxd_id(also client_id and client_secret). If you
+          have client created from OP server then skip it and enter only below client_id and client_secret. </p>
       </div>
     </div>
 
@@ -88,7 +101,8 @@
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <select class="form-control" ng-model="data.client_token_endpoint_auth_method" ng-options="method as method for method in token_endpoint_auth_method">
+        <select class="form-control" ng-model="data.client_token_endpoint_auth_method"
+                ng-options="method as method for method in token_endpoint_auth_method">
           <option value="">- Please select one -</option>
           <option value="">none</option>
         </select>
@@ -100,7 +114,8 @@
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <select class="form-control" ng-model="data.client_token_endpoint_auth_signing_alg" ng-options="alg as alg for alg in token_endpoint_auth_signing_alg">
+        <select class="form-control" ng-model="data.client_token_endpoint_auth_signing_alg"
+                ng-options="alg as alg for alg in token_endpoint_auth_signing_alg">
           <option value="">- Please select one -</option>
           <option value="">none</option>
         </select>
