--- a/konga/assets/js/app/plugins/modals/add-plugin-modal.html
+++ b/konga/assets/js/app/plugins/modals/add-plugin-modal.html
@@ -104,7 +104,7 @@
                             </select>
                         </div>
                         <div data-ng-if="!value.enum">
-                            <input type="text" ng-model="value.value" class="form-control" data-ng-disabled="(pluginName == 'gluu-oauth2-client-auth')">
+                          <input type="text" ng-model="value.value" class="form-control"> <button type="button" class="btn btn-danger btn-xs" data-ng-click="value.value = ''">Clear</button>
                         </div>
                     </div>
                     <div ng-switch-when="array">
