Made changes in gluu-oauth2 for the flow in access event method

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -25,6 +25,19 @@
       </div>
     </div>
     <div class="form-group">
+      <label class="col-sm-4 control-label">kong acts as uma client<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.kong_acts_as_uma_client" switch-size="small" type="checkbox" switch-on-text="YES"
+               switch-off-text="NO">
+        <p class="help-block">
+          If checked, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a 401/Unauthorized.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label class="col-sm-4 control-label">Native UMA Client<br><em>
         <small class="help-block">optional</small>
       </em></label>
