Update Konga GUI by different plugin modes and new name

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -25,27 +25,41 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-4 control-label">kong acts as uma client - Mix Mode<br><em>
+      <label class="col-sm-4 control-label">OAuth Mode<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input bs-switch ng-model="data.mix_mode" switch-size="small" type="checkbox" switch-on-text="YES"
-               switch-off-text="NO">
+        <input bs-switch ng-model="data.oauth_mode" switch-size="small" type="radio" switch-on-text="YES"
+               switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If checked, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a 401/Unauthorized.
+          If checked, kong act as OAuth client only.
         </p>
       </div>
     </div>
 
     <div class="form-group">
-      <label class="col-sm-4 control-label">Native UMA Client - UMA Mode<br><em>
+      <label class="col-sm-4 control-label">UMA Mode<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input bs-switch ng-model="data.uma_mode" switch-size="small" type="checkbox" switch-on-text="YES"
-               switch-off-text="NO">
+        <input bs-switch ng-model="data.uma_mode" switch-size="small" type="radio" switch-on-text="YES"
+               switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          This box indicates your client is a valid UMA client, and obtain and send send an RPT as the access token.
+          This box indicates your client is a valid UMA client, and obtain and send an RPT as the access token.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Mix Mode<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.mix_mode" switch-size="small" type="radio" switch-on-text="YES"
+               switch-off-text="NO" name="mode_group">
+        <p class="help-block">
+          If checked, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a
+          401/Unauthorized.
         </p>
       </div>
     </div>
