--- a/konga/assets/js/app/plugins/plugins.html
+++ b/konga/assets/js/app/plugins/plugins.html
@@ -58,10 +58,10 @@
             <raw-view data-item="item"></raw-view>
           </td>
           <th>
-            <a ui-sref="apis.uma-plugin({api_id: item.api_id})" data-ng-if="item.name == 'kong-uma-rs'">
+            <a ui-sref="apis.uma-plugin({api_id: item.api_id})" data-ng-if="item.name == 'gluu-oauth2-rs'">
               {{item.name}}
             </a>
-            <a href ng-click="onEditPlugin(item)" data-ng-if="item.name != 'kong-uma-rs'">{{item.name}}</a>
+            <a href ng-click="onEditPlugin(item)" data-ng-if="item.name != 'gluu-oauth2-rs'">{{item.name}}</a>
           </th>
           <td>
             <a data-ng-if="item.api_id" data-ui-sref="apis.edit({api_id:item.api_id})">{{item.api_id}}</a>
