Update konga GUI for unprotected_path config #45

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -32,7 +32,7 @@
         <input bs-switch ng-model="data.oauth_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If checked, kong act as OAuth client only.
+          If Yes, kong act as OAuth client only.
         </p>
       </div>
     </div>
@@ -58,8 +58,21 @@
         <input bs-switch ng-model="data.mix_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If checked, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a
+          If Yes, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a
           401/Unauthorized.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Allow Unprotected path<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.allow_unprotected_path" switch-size="small" type="radio" switch-on-text="Allow"
+               switch-off-text="Deny">
+        <p class="help-block">
+          What to do when path is not protected by UMA-RS? If Deny then RS returns 401/Unaithorized.
         </p>
       </div>
     </div>
@@ -80,7 +93,7 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.oxd_id" class="form-control">
-        <p class="help-block">If you have existing oxd entry then enter oxd_id(also client_id and client_secret). If you
+        <p class="help-block">If you have existing oxd entry then enter oxd_id(also client id, client secret and client id of oxd id). If you
           have client created from OP server then skip it and enter only below client_id and client_secret. </p>
       </div>
     </div>
@@ -102,6 +115,16 @@
       <div class="col-sm-7">
         <input ng-model="data.client_secret" class="form-control">
         <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Client Id of oxd id<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.client_id_of_oxd_id" class="form-control">
+        <p class="help-block">If you have existing oxd id then add value in Client Id of oxd id.</p>
       </div>
     </div>
 
