Updated inline help.

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -20,8 +20,7 @@
       <div class="col-sm-7">
         <input ng-model="data.name" class="form-control">
         <div class="text-danger" ng-if="errors.name" data-ng-bind="errors.name"></div>
-        <p class="help-block">The name to associate to the credential. In OAuth 2.0 this would be the application
-          name.</p>
+        <p class="help-block">A descriptive name used by the OAuth AS</p>
       </div>
     </div>
     <div class="form-group">
@@ -32,7 +31,8 @@
         <input bs-switch ng-model="data.oauth_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If Yes, kong act as OAuth client only.
+          If yes, the client must present an ACTIVE
+          OAuth token to call an API.
         </p>
       </div>
     </div>
@@ -45,7 +45,8 @@
         <input bs-switch ng-model="data.uma_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          This box indicates your client is a valid UMA client, and obtain and send an RPT as the access token.
+          If yes, the client must present an ACTIVE UMA RPT token
+          to call an  API.
         </p>
       </div>
     </div>
@@ -58,8 +59,16 @@
         <input bs-switch ng-model="data.mix_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If Yes, then the gluu-oauth2 plugin will try to obtain an UMA RPT token if the RS returns a
-          401/Unauthorized.
+          If yes, the client must present an ACTIVE
+          OAuth token to call an API. Kong will
+          obtain an UMA permission ticket, and attempt
+          to obtain an RPT on behalf of the client.
+          Client can send pushed claims using header
+          <code>UMA_PUSHED_CLAIMS</code> with JSON in
+          the following format:
+          <code>
+            [{"claim_token":"...","claim_token_format":"..."},{},{},...]
+          </code>
         </p>
       </div>
     </div>
@@ -72,7 +81,7 @@
         <input bs-switch ng-model="data.allow_unprotected_path" switch-size="small" type="radio" switch-on-text="Allow"
                switch-off-text="Deny">
         <p class="help-block">
-          What to do when path is not protected by UMA-RS? If Deny then RS returns 401/Unaithorized.
+          What to do when path is not protected by UMA-RS? If Deny then RS returns 401/Unauthorized.
         </p>
       </div>
     </div>
