--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -67,7 +67,7 @@
           <code>UMA_PUSHED_CLAIMS</code> with JSON in
           the following format:
           <code>
-            [{"claim_token":"...","claim_token_format":"..."},{},{},...]
+            {"claim_token":"...","claim_token_format":"..."}
           </code>
         </p>
       </div>
@@ -82,6 +82,19 @@
                switch-off-text="Deny">
         <p class="help-block">
           What to do when path is not protected by UMA-RS? If Deny then RS returns 401/Unauthorized.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Show Consumer custom Id<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.show_consumer_custom_id" switch-size="small" type="radio" switch-on-text="Yes"
+               switch-off-text="No">
+        <p class="help-block">
+          If <code>Yes</code>, then the plugin will set consumer custom id in legacy header otherwise not.
         </p>
       </div>
     </div>
