Made UI for configure restricted API #65

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -63,8 +63,8 @@
           OAuth token to call an API. Kong will
           obtain an UMA permission ticket, and attempt
           to obtain an RPT on behalf of the client.
-          Client can send pushed claims using header
-          <code>UMA_PUSHED_CLAIMS</code> with JSON in
+          Client can send pushed claims using header3.5
+          <code>UMA_PUSHED_CLAIMS</code> with JSON in980 6
           the following format:
           <code>
             {"claim_token":"...","claim_token_format":"..."}
@@ -87,6 +87,46 @@
     </div>
 
     <div class="form-group">
+      <label class="col-sm-4 control-label">Restrict API's<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.restrict_api" switch-size="small" type="radio" switch-on-text="Enabled"
+               switch-off-text="Disabled">
+        <button
+          ng-click="restrictAPIModel()"
+          data-ng-disabled="!data.restrict_api"
+          class="btn btn-primary btn-sm pull-right">
+          <i class="mdi mdi-plus"></i>
+          Select restricted API's
+        </button>
+        <p class="help-block">
+          The client can only call specified API's if client restriction is enabled.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">OAuth scope<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <chips ng-model="data.scope">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">
+          Security for OAuth scope.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label class="col-sm-4 control-label">Show Consumer custom Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
@@ -99,28 +139,28 @@
       </div>
     </div>
 
-    <div class="form-group" ng-class="{'has-error' : errors.oxd_http_url}">
-      <label class="col-sm-4 control-label">OXD http URL <br><em>
-      </em></label>
-      <div class="col-sm-7">
-        <input ng-model="data.oxd_http_url" class="form-control" disabled>
-        <div class="text-danger" ng-if="errors.oxd_http_url" data-ng-bind="errors.oxd_http_url"></div>
-        <p class="help-block">OXD http url used to create and register OpenId client.</p>
-      </div>
-    </div>
+    <!--<div class="form-group" ng-class="{'has-error' : errors.oxd_http_url}">-->
+      <!--<label class="col-sm-4 control-label">OXD http URL <br><em>-->
+      <!--</em></label>-->
+      <!--<div class="col-sm-7">-->
+        <!--<input ng-model="data.oxd_http_url" class="form-control" disabled>-->
+        <!--<div class="text-danger" ng-if="errors.oxd_http_url" data-ng-bind="errors.oxd_http_url"></div>-->
+        <!--<p class="help-block">OXD http url used to create and register OpenId client.</p>-->
+      <!--</div>-->
+    <!--</div>-->
 
     <div class="form-group">
       <label class="col-sm-4 control-label">OXD Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.oxd_id" class="form-control">
+        <input ng-model="data.oxd_id" class="form-control" data-ng-disabled="!!data.id">
         <p class="help-block">If you have existing oxd entry then enter oxd_id(also client id, client secret and client id of oxd id). If you
           have client created from OP server then skip it and enter only below client_id and client_secret. </p>
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" data-ng-if="!data.id">
       <label class="col-sm-4 control-label">Client Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
@@ -130,7 +170,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" data-ng-if="!data.id">
       <label class="col-sm-4 control-label">Client secret<br><em>
         <small class="help-block">optional</small>
       </em></label>
@@ -140,7 +180,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" data-ng-if="!data.id">
       <label class="col-sm-4 control-label">Client Id of oxd id<br><em>
         <small class="help-block">optional</small>
       </em></label>
@@ -196,7 +236,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-7">
-        <button type="submit" class="btn btn-primary" ng-click="create()">
+        <button type="submit" class="btn btn-primary" ng-click="manage()">
           <i class="mdi mdi-check"></i>
           Submit
         </button>
