--- a/konga/assets/js/app/consumers/credentials/oauth2.html
+++ b/konga/assets/js/app/consumers/credentials/oauth2.html
@@ -30,10 +30,12 @@
       <th class="no-wrap">{{cred.oxd_id}}</th>
       <th class="no-wrap">{{cred.client_id}}</th>
       <td width="1" class="no-wrap">{{cred.created_at | date : format : timezone}}</td>
-      <td width="1">
+      <td class="no-wrap">
+        <button type="button" ng-click="createOAuth2(cred)" class="btn btn-success btn-link">
+          <i class="mdi mdi-pencil"></i>
+        </button> |
         <button type="button" ng-click="deleteOAuth2($index,cred)" class="btn btn-danger btn-link">
           <i class="mdi mdi-delete"></i>
-          Delete
         </button>
       </td>
     </tr>
