Designed page for configure allow scope expression #64

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -29,7 +29,7 @@
       </em></label>
       <div class="col-sm-7">
         <input bs-switch ng-model="data.oauth_mode" switch-size="small" type="radio" switch-on-text="YES"
-               switch-off-text="NO" name="mode_group">
+               switch-off-text="NO" name="mode_group" data-ng-change="data.allow_oauth_scope_expression = (data.oauth_mode ? true: false)">
         <p class="help-block">
           If yes, the client must present an ACTIVE
           OAuth token to call an API.
@@ -87,6 +87,19 @@
     </div>
 
     <div class="form-group">
+      <label class="col-sm-4 control-label">OAuth scope security<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input bs-switch ng-model="data.allow_oauth_scope_expression" switch-size="small" type="radio" switch-on-text="Allow"
+               switch-off-text="Deny">
+        <p class="help-block">
+          If allow, OAuth scope expression will be applied on scope of token in oauth mode.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label class="col-sm-4 control-label">Restrict API's<br><em>
         <small class="help-block">optional</small>
       </em></label>
@@ -102,26 +115,6 @@
         </button>
         <p class="help-block">
           The client can only call specified API's if client restriction is enabled.
-        </p>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-4 control-label">OAuth scope<br><em>
-        <small class="help-block">optional</small>
-      </em></label>
-      <div class="col-sm-7">
-        <chips ng-model="data.scope">
-          <chip-tmpl>
-            <div class="default-chip">
-              {{chip}}
-              <i class="mdi mdi-close" remove-chip></i>
-            </div>
-          </chip-tmpl>
-          <input chip-control/>
-        </chips>
-        <p class="help-block">
-          Security for OAuth scope.
         </p>
       </div>
     </div>
