--- a/konga/assets/js/app/snapshots/index.html
+++ b/konga/assets/js/app/snapshots/index.html
@@ -66,8 +66,7 @@
                     </a>
                 </td>
                 <td>
-                    <button class="btn btn-danger btn-link" ng-bootbox-confirm="Are you sure you want to delete this snapshot?"
-                            ng-bootbox-confirm-action="deleteSnapshot(snapshot)">
+                    <button class="btn btn-danger btn-link" data-ng-click="deleteSnapshot(snapshot)">
                         <i class="mdi mdi-delete"></i>
                         Delete
                     </button>
