Unify toggle bar descriptions #108

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -31,7 +31,7 @@
         <input bs-switch ng-model="data.oauth_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group" data-ng-change="data.allow_oauth_scope_expression = (data.oauth_mode ? true: false)">
         <p class="help-block">
-          If yes, the client must present an ACTIVE
+          If <code>Yes</code>, the client must present an ACTIVE
           OAuth token to call an API.
         </p>
       </div>
@@ -45,7 +45,7 @@
         <input bs-switch ng-model="data.uma_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If yes, the client must present an ACTIVE UMA RPT token
+          If <code>Yes</code>, the client must present an ACTIVE UMA RPT token
           to call an  API.
         </p>
       </div>
@@ -59,7 +59,7 @@
         <input bs-switch ng-model="data.mix_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
-          If yes, the client must present an ACTIVE
+          If <code>Yes</code>, the client must present an ACTIVE
           OAuth token to call an API. Kong will
           obtain an UMA permission ticket, and attempt
           to obtain an RPT on behalf of the client.
@@ -94,7 +94,7 @@
         <input bs-switch ng-model="data.allow_oauth_scope_expression" switch-size="small" type="radio" switch-on-text="Allow"
                switch-off-text="Deny">
         <p class="help-block">
-          If allow, OAuth scope expression will be applied on scope of token in oauth mode.
+          If <code>Allow</code>, OAuth scope expression will be applied on scope of token in oauth mode.
         </p>
       </div>
     </div>
