--- a/konga/assets/js/app/consumers/credentials/oauth2.html
+++ b/konga/assets/js/app/consumers/credentials/oauth2.html
@@ -21,20 +21,17 @@
       <th>name</th>
       <th>oxd id</th>
       <th>client id</th>
-      <th>created</th>
       <th></th>
     </tr>
     <tr data-ng-repeat="cred in oauth2_credentials.data | orderBy : created_at : true">
       <td width="1">{{$index+1}}.</td>
       <th>{{cred.name}}</th>
       <th class="no-wrap">{{cred.oxd_id}}</th>
-      <th class="no-wrap">{{cred.client_id}}</th>
-      <td width="1" class="no-wrap">{{cred.created_at | date : format : timezone}}</td>
+      <th class="no-wrap"><a href title="Click to view client id" data-ng-click="showClientId(cred.client_id)">...{{cred.client_id.substring(cred.client_id.lastIndexOf("."), cred.client_id.length)}}</a></th>
       <td class="no-wrap">
         <button type="button" ng-click="createOAuth2(cred)" class="btn btn-success btn-link">
           <i class="mdi mdi-pencil"></i>
-        </button> |
-        <button type="button" ng-click="deleteOAuth2($index,cred)" class="btn btn-danger btn-link">
+        </button>|<button type="button" ng-click="deleteOAuth2($index,cred)" class="btn btn-danger btn-link">
           <i class="mdi mdi-delete"></i>
         </button>
       </td>
