Small Typo fixed

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -63,8 +63,8 @@
           OAuth token to call an API. Kong will
           obtain an UMA permission ticket, and attempt
           to obtain an RPT on behalf of the client.
-          Client can send pushed claims using header3.5
-          <code>UMA_PUSHED_CLAIMS</code> with JSON in980 6
+          Client can send pushed claims using header
+          <code>UMA_PUSHED_CLAIMS</code> with JSON in
           the following format:
           <code>
             {"claim_token":"...","claim_token_format":"..."}
@@ -94,7 +94,7 @@
         <input bs-switch ng-model="data.allow_oauth_scope_expression" switch-size="small" type="radio" switch-on-text="Allow"
                switch-off-text="Deny">
         <p class="help-block">
-          If <code>Allow</code>, OAuth scope expression will be applied on scope of token in oauth mode.
+          If <code>Allow</code>, the Gateway will enforce OAuth scope requirements.
         </p>
       </div>
     </div>
