Changed the location of the + in plugins #114

--- a/konga/assets/js/app/plugins/add-plugins.html
+++ b/konga/assets/js/app/plugins/add-plugins.html
@@ -42,7 +42,7 @@
             <button
               class="btn btn-primary btn-link btn-icon"
               angular-ripple data-ng-click="onAddPlugin(key)">
-              <i class="mdi mdi-plus" data-ng-class="{'text-white':value.isAdded}"></i>
+              <i class="mdi mdi-plus plugin_i" data-ng-class="{'text-white':value.isAdded}"></i>
             </button>
             <i class="mdi mdi-check-all" ng-show="value.isAdded"></i>
           </div>
