Designed toggle bars #85

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -1,3 +1,8 @@
+<style>
+  .check-toggle .bootstrap-switch-container{
+    letter-spacing: 0 !important;
+  }
+</style>
 <div class="modal-header success">
   <h4 class="modal-title" id="modal-title">
     Create OAuth2
@@ -27,7 +32,7 @@
       <label class="col-sm-4 control-label">OAuth Mode<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.oauth_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group" data-ng-change="data.allow_oauth_scope_expression = (data.oauth_mode ? true: false)">
         <p class="help-block">
@@ -41,7 +46,7 @@
       <label class="col-sm-4 control-label">UMA Mode<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.uma_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
@@ -55,7 +60,7 @@
       <label class="col-sm-4 control-label">Mix Mode<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.mix_mode" switch-size="small" type="radio" switch-on-text="YES"
                switch-off-text="NO" name="mode_group">
         <p class="help-block">
@@ -77,7 +82,7 @@
       <label class="col-sm-4 control-label">Allow Unprotected path<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.allow_unprotected_path" switch-size="small" type="radio" switch-on-text="Allow"
                switch-off-text="Deny">
         <p class="help-block">
@@ -90,7 +95,7 @@
       <label class="col-sm-4 control-label">OAuth scope security<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.allow_oauth_scope_expression" switch-size="small" type="radio" switch-on-text="Allow"
                switch-off-text="Deny">
         <p class="help-block">
@@ -103,7 +108,7 @@
       <label class="col-sm-4 control-label">Restrict API's<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.restrict_api" switch-size="small" type="radio" switch-on-text="Enabled"
                switch-off-text="Disabled">
         <button
@@ -123,7 +128,7 @@
       <label class="col-sm-4 control-label">Show Consumer custom Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
-      <div class="col-sm-7">
+      <div class="col-sm-7 check-toggle">
         <input bs-switch ng-model="data.show_consumer_custom_id" switch-size="small" type="radio" switch-on-text="Yes"
                switch-off-text="No">
         <p class="help-block">
