--- a/konga/assets/js/app/settings/index.html
+++ b/konga/assets/js/app/settings/index.html
@@ -35,7 +35,7 @@
               Logout session timeout
             </label>
             <input type="number" class="form-control" data-ng-model="KONGA_CONFIG.session_id_lifetime">
-            <p class="help-block">The interval in minute at which will be log out you in ideal time.</p>
+            <p class="help-block">The interval in minutes at which you will be logged out after idle time</p>
           </div>
         </div>
       </div>
